[PR C++/83287] Mark lookup for keeping

https://gcc.gnu.org/ml/gcc-patches/2017-12/msg00242.html
	PR c++/83287
	* tree.c (build_min): Check CAST_EXPR arg for OVERLOADs.

	* g++.dg/lookup/pr83287.C: New.

From-SVN: r255429